@@ -370,224 +370,5 @@ class CreateView {
 
         return $result;
     }   // getSimpleTemplate
-
-    /**
-    * Determine which template subpart should be used atfer the last save operation
-    *
-    * @param string $cmd: the cmd that was executed
-    * @param string $cmdKey: the command key that was use
-    * @param boolean $bCustomerConfirmsMode =
-    * 			($cmd == '' || $cmd == 'create') &&
-    *			($cmdKey != 'edit') &&
-    *			$conf['enableAdminReview'] &&
-    *			($conf['enableEmailConfirmation'] || $conf['infomail'])
-    * @param boolean $bSetfixed =
-    *				This is the case where the user or admin has to confirm
-    *			$conf['enableEmailConfirmation'] ||
-    *			($this->theTable == 'fe_users' && $conf['enableAdminReview']) ||
-    *			$conf['setfixed']
-    * @param boolean $bCreateReview =
-    *				This is the case where the user does not have to confirm, but has to wait for admin review
-    *				This applies only on create ($bDefaultMode) and to fe_users
-    *				$bCreateReview implies $bSetfixed
-    *			!$conf['enableEmailConfirmation'] &&
-    *			$conf['enableAdminReview']
-    * @return boolean or string
-    */
-    public function getKeyAfterSave (
-        $cmd,
-        $cmdKey,
-        $bCustomerConfirmsMode,
-        $bSetfixed,
-        $bCreateReview
-    ) {
-        $result = false;
-        switch ($cmd) {
-            case 'delete':
-                $result = 'DELETE' . SAVED_SUFFIX;
-                break;
-            case 'edit':
-            case 'password':
-                $result = 'EDIT' . SAVED_SUFFIX;
-                break;
-            case 'invite':
-                $result = SETFIXED_PREFIX . 'INVITE';
-                break;
-            case 'create':
-            default:
-                if ($cmdKey == 'edit') {
-                    $result = 'EDIT' . SAVED_SUFFIX;
-                } else if ($bSetfixed) {
-                    $result = SETFIXED_PREFIX . 'CREATE';
-
-                    if ($bCreateReview) {
-                        $result = 'CREATE' . SAVED_SUFFIX . '_REVIEW';
-                    } else if ($bCustomerConfirmsMode) {
-                        $result .= '_REVIEW';
-                    }
-                } else {
-                    $result = 'CREATE' . SAVED_SUFFIX;
-                }
-                break;
-        }
-        return $result;
-    }
-
-    /**
-    * Displaying the page here that says, the record has been saved.
-    * You're able to include the saved values by markers.
-    *
-    * @param array $cObj: the cObject
-    * @param array $langObj: the language object
-    * @param array $controlData: the object of the control data
-    * @param string $theTable: the table in use
-    * @param array $autoLoginKey: the auto-login key
-    * @param string  $subpartMarker: the template subpart marker
-    * @param array  $row: the data array, if any
-    * @param array  $errorFieldArray: array of field with errors (former $this->data->inError[$theField])
-    * @return string  the template with substituted parts and markers
-    */
-    public function afterSave (
-        $conf,
-        $cObj,
-        \JambageCom\Agency\Api\Localization $langObj,
-        \JambageCom\Agency\Request\Parameters $controlData,
-        \JambageCom\Agency\Configuration\ConfigurationStore $confObj,
-        $tcaObj,
-        $markerObj,
-        $dataObj,
-        $setfixedObj,
-        \JambageCom\Agency\View\Template $template,
-        $theTable,
-        $autoLoginKey,
-        $prefixId,
-        $dataArray,
-        array $origArray,
-        $securedArray,
-        $cmd,
-        $cmdKey,
-        $key,
-        $templateCode,
-        &$markerArray,
-        $errorFieldArray,
-        &$content
-    ) {
-        $errorContent = '';
-
-            // Display confirmation message
-        $subpartMarker = '###TEMPLATE_' . $key . '###';
-        $templateCode = $cObj->getSubpart($templateCode, $subpartMarker);
-
-        if ($templateCode) {
-                // Remove non-included fields
-            $templateCode =
-                $template->removeRequired(
-                    $conf,
-                    $cObj,
-                    $controlData,
-                    $dataObj,
-                    $theTable,
-                    $cmdKey,
-                    $templateCode,
-                    $errorFieldArray
-                );
-            $markerArray =
-                $markerObj->fillInMarkerArray(
-                    $markerArray,
-                    $dataArray,
-                    $securedArray,
-                    $controlData,
-                    $dataObj,
-                    $confObj,
-                    '',
-                    true,
-                    'FIELD_',
-                    true
-                );
-            $markerObj->addStaticInfoMarkers(
-                $markerArray,
-                $langObj,
-                $prefixId,
-                $dataArray
-            );
-
-            $tcaObj->addTcaMarkers(
-                $markerArray,
-                $conf,
-                $langObj,
-                $controlData,
-                $dataArray,
-                $origArray,
-                $cmd,
-                $cmdKey,
-                $theTable,
-                $prefixId,
-                true
-            );
-
-            $markerObj->addLabelMarkers(
-                $markerArray,
-                $conf,
-                $cObj,
-                $langObj,
-                $controlData->getExtensionKey(),
-                $theTable,
-                $dataArray,
-                $origArray,
-                $securedArray,
-                array(),
-                $controlData->getRequiredArray(),
-                $dataObj->getFieldList(),
-                $GLOBALS['TCA'][$theTable]['columns'],
-                '',
-                false
-            );
-
-            if (
-                $cmdKey == 'create' &&
-                !$conf['enableEmailConfirmation'] &&
-                !$controlData->enableAutoLoginOnCreate($conf)
-            ) {
-                $markerObj->addPasswordTransmissionMarkers(
-                    $markerArray,
-                    $controlData->getUsePasswordAgain()
-                );
-            }
-
-            if (isset($conf[$cmdKey . '.']['marker.'])) {
-                if ($conf[$cmdKey . '.']['marker.']['computeUrl'] == '1') {
-                    $this->setfixedObj->computeUrl(
-                        $cmd,
-                        $prefixId,
-                        $cObj,
-                        $controlData,
-                        $markerArray,
-                        $conf['setfixed.'],
-                        $dataArray,
-                        $theTable,
-                        $conf['useShortUrls'],
-                        $conf['edit.']['setfixed'],
-                        $autoLoginKey,
-                        $conf['confirmType']
-                    );
-                }
-            }
-
-            $uppercase = false;
-            $deleteUnusedMarkers = true;
-            $content = $cObj->substituteMarkerArray(
-                $templateCode,
-                $markerArray,
-                '',
-                $uppercase,
-                $deleteUnusedMarkers
-            );
-        } else {
-            $errorText = $langObj->getLL('internal_no_subtemplate');
-            $errorContent = sprintf($errorText, $subpartMarker);
-        }
-        return $errorContent;
-    }
-
 }
 
